# nightshift

./: .gitignore  Makefile.am  Makefile.in  README.md  Roadmap.md  configure  configure.ac  configure.in  version.m4
.github/workflows/: c-cpp.yml
contrib/systemd/: nightshift.service
dozord/: AUTHORS  Makefile.am  Makefile.in  README  answer.c  answer.h  app-config.c  app-config.h  command.c  command.h  config.h  config.h.in  configure  configure.ac  configure.in  dozord.8  dozord.c  event-stream.c  event-stream.h  logger.c  logger.h  main.c  nightshift-mqtt.c  nightshift-mqtt.h  socket-server.c  socket-server.h
libdozor/: Makefile.am  Makefile.in  README  config.h  config.h.in  configure  configure.ac  configure.in  device-event.c  device-event.h  dozor-crypto.c  dozor-crypto.h  dozor.h  event.c  event.h  libdozor.c  rc4.c  rc4.h  session.h  utils.c  utils.h
liblogger/: Makefile.am  liblogger.c  liblogger.h
test/: tcp_client.c
tools/: Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac  parser.c  sender.c
